fix: change class "align" in "align-center"

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
   justify-content: space-around;
 }
 
-.align {
+.align-center {
   align-items: center;
 }
 
